All Integration is Done !

--- a/public/Html_CRUD_Pages/getPages.html
+++ b/public/Html_CRUD_Pages/getPages.html
@@ -25,13 +25,13 @@
         <!-- Search Bar -->
         <form class="d-flex">
             <input id="searchBar" class="form-control me-2" type="search" placeholder="Landing Page Id to be retrived" aria-label="Search">
-            <button id="deleteButton" class="btn btn-outline-primary" type="submit">Get</button>
+            <button id="getButton" class="btn btn-outline-primary" type="button">Get</button>
         </form>
     </div>
 
     <br>
 
-    <h2 class="text-center">Response Here</h2>
+    <a class="text-center">Response Here<a>
 
 
 
