--- a/public/Html_CRUD_Pages/createPages.html
+++ b/public/Html_CRUD_Pages/createPages.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script defer src="createPages.js"></script>
+    <script defer src="../JS_For_CRUD_Pages/createPages.js"></script>
 </head>
 <body>
 
@@ -102,12 +102,12 @@
                     <div class="row">
                         <!-- Pair 3 -->
                         <div class="col">
-                            <label for="testimonialHeader" class="form-label">Testimonial Header</label>
-                            <input type="text" class="form-control" id="testimonialHeader" placeholder="Header ">
+                            <label for="customerName" class="form-label">Customer Name</label>
+                            <input type="text" class="form-control" id="customerName" placeholder="Name">
                         </div>
                         <div class="col">
-                            <label for="customerName" class="form-label">Customer Name</label>
-                            <textarea class="form-control" id="customerName" rows="3" placeholder="Description"></textarea>
+                            <label for="testimonialHeader" class="form-label">Testimonial</label>
+                            <textarea class="form-control" id="testimonialHeader" rows="3" placeholder="Testimonial"></textarea>
                         </div>
                         <div class="col text-center">
                             <button id="testimonialAddButton" type="button" class="btn btn-info mt-4">Add</button>
@@ -125,7 +125,7 @@
 
             <!-- Submit Button -->
             <div class="mt-4 text-center">
-                <button id="submitButton" type="submit" class="btn btn-primary">Generate The Page</button>
+                <button id="submitButton" type="button" class="btn btn-primary">Generate The Page</button>
                 <a id="browsingLink"  class="text-center" style="display:none;"><button class="btn btn-info">Go To The Generated Page</button></a>
             </div>
 
