confirmation text is added for getPages.html

--- a/public/Html_CRUD_Pages/getPages.html
+++ b/public/Html_CRUD_Pages/getPages.html
@@ -26,12 +26,13 @@
         <form class="d-flex">
             <input id="searchBar" class="form-control me-2" type="search" placeholder="Landing Page Id to be retrived" aria-label="Search">
             <button id="getButton" class="btn btn-outline-primary" type="button">Get</button>
+            
         </form>
+        <a id="response" class="text-center"><a>
     </div>
 
     <br>
 
-    <a class="text-center">Response Here<a>
 
 
 
